--- a/AcoStand/Views/Artigos/Create.cshtml
+++ b/AcoStand/Views/Artigos/Create.cshtml
@@ -32,33 +32,41 @@
                 <input asp-for="Contacto" class="form-control" />
                 <span asp-validation-for="Contacto" class="text-danger"></span>
             </div>
-            <div class="form-group col-md-10">
-                    <label>Ficheiros: </label>
-                    <input type="image" name="ficheiro" multiple="multiple" />
+            <div class="form-group">
+                <label asp-for="Contacto" class="control-label"></label>
+                <input type="file" class="form-control" name="artigoImg" />
+                <span asp-validation-for="Contacto" class="text-danger"></span>
             </div>
-            @*<div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Validado" /> @Html.DisplayNameFor(model => model.Validado)
-                </label>
-            </div>*@
-        @*<div class="form-group">
-            <label asp-for="DonoFK" class="control-label"></label>
-            <select asp-for="DonoFK" class="form-control" asp-items="ViewBag.DonoFK"></select>
-        </div>*@
             <div class="form-group">
                 <label asp-for="CategoriaFK" class="control-label"></label>
                 <select asp-for="CategoriaFK" class="form-control" asp-items="ViewBag.CategoriaFK"></select>
             </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
-    </div>
+
+</div>
 </div>
 
 <div>
     <a asp-action="Index">Voltar</a>
 </div>
+
+@*<script>
+  "use strict";
+
+  function AJAXSubmit (oFormElement) {
+    var oReq = new XMLHttpRequest();
+    oReq.onload = function(e) {
+    oFormElement.elements.namedItem("result").value =
+      'Result: ' + this.status + ' ' + this.statusText;
+    };
+    oReq.open("post", oFormElement.action);
+    oReq.send(new FormData(oFormElement));
+  }
+</script>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
