--- a/AcoStand/Views/Artigos/Index.cshtml
+++ b/AcoStand/Views/Artigos/Index.cshtml
@@ -51,7 +51,7 @@
         {
         <tr>
             <td>
-                @*<img src="/ImagensArtigos/honda1.png" alt="Image" width="100" />*@
+                <img src="/ImagensArtigos/@Html.DisplayFor(modelItem => item.FileName)" alt="Image" width="100" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Categoria.Designacao)
