--- a/AcoStand/Views/Favoritos/Index.cshtml
+++ b/AcoStand/Views/Favoritos/Index.cshtml
@@ -28,7 +28,7 @@
         {
         <tr>
             <td>
-                @*<img src="/ImagensArtigos/honda1.png" alt="Image" width="100" />*@
+                <img src="/ImagensArtigos/@Html.DisplayFor(modelItem => item.Artigo.FileName)" alt="Image" width="100" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Artigo.Categoria.Designacao)
